--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,14 @@
 
   color: rgba(255, 255, 255, 0.87);
 }
+
+
+.leaflet-container {
+  width: 100vw;
+  height: 100vh;
+}
+
+/* #map {
+  width: 100vw;
+  height: 100vh;
+} */
